0.52 2023-11-22
        - Update Piwik dependency to point to matomo.js. (diewald)

0.51 2023-09-27
        - Support defined log file in configuration. (diewald)
        - Remove experimental_client_registration setting
          and make client registration mandatory in OAuth
          (diewald)
        - Introduce 'reserved terms' in documentation (diewald)
        - Support CQP in frontend (diewald)
        - Fix support for dot-symbols in (corpus/doc/text)-IDs
          (diewald)
        - Update information regarding CSP in conf (diewald)
        - Support NKJP named entities in annotation helper
          (diewald)
	- Marketplace to install and uninstall plugins (hebasta)

0.50 2023-05-08
        - Improvement of NKJP-annotation helper. (diewald)
        - Add redirect-uri to client view. (diewald)
        - Added german translation for Cosmas-II. (hebasta)
        - Workaround for failing utf8 test in some
          environments (fixes #197). (diewald)
        - Require at least conllu2korapxml v0.6.1. (diewald)
        - Improve redirection on all authorization calls. (diewald)
        - Redirect-URIs are required to be absolute
          by newer versions of Kustvakt. (diewald)
        - Newer versions of Kustvakt disabled default
          scope on authorization requests. (diewald)
        - Introduce logo addon. (diewald)
        - Added ud to default foundries. (diewald)

0.49 2023-02-23
        - Introduce conllu2korapxml command via plugin. (diewald)
        - Introduce korapxml2conllu command via plugin. (diewald)
        - Do not follow redirect links on OAuth authorization
          requests. (diewald)

0.48 2023-01-12
        - Added support for NKJP tagset in annotation
          assistant. (diewald)
        - Remove deprecated 'auth_support' (since 0.31)
          configuration parameter - use 'Auth' plugin instead. (diewald)
        - Support environment variable KALAMAR_CLIENT_FILE for
          client information. (diewald)